variables.Variables.scala.error
Compilation error:
Variables:9: error: Missing closing brace `}' assumed here
	}
        ^